# chat

./: .env.example  .gitignore  README.md  chat.txt  compose.yaml  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
.github/: cargo-fmt.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cargo-fmt.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  models.rs  server.rs
backend/src/actix/: mod.rs  routes.rs  start.rs
backend/src/actix/auth/: login.rs  mod.rs  register.rs
backend/src/chat_infrastructure/: chat.rs  mod.rs
backend/src/database/: init.rs
design/: schema-pg.sql
docker/pg/: Dockerfile
schema/cassandra/: init.cql
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/chat/: layout.tsx  page.tsx
src/app/chat/[groupId]/: layout.tsx  page.tsx
src/app/components/: auth-form.tsx  chat-message.tsx  chat-sidebar.tsx  notification-provider.tsx  notification.tsx  skeletons.tsx  user-provider.tsx
src/app/components/context/: notification-provider.tsx
src/app/components/ui/: buttons.tsx  (+1 more)
src/app/dashboard/: layout.tsx  page.tsx
src/app/login/: page.tsx
src/app/profile/: layout.tsx  page.tsx
src/app/record/: page.tsx
src/app/register/: page.tsx
src/app/web-socket/: web-socket.tsx
src/lib/: axios.ts  db-types.ts  mock-data.ts  notification-store.ts  settings-config.ts
(+11 files in other folders)
