[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
diesel = { version = "2.2.10", features = ["postgres", "uuid"] }
diesel-async = { version = "0.5.2", features = ["postgres", "pool", "deadpool"] }
dotenv = "0.15.0"
futures-util = "0.3"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["default", "connect", "handshake", "stream", "url"] }
tungstenite = "0.26.2"
url = "2"